fix animation bug in core component-- remove overflow hidden. Add extra space to the top of many components so core elements do not overlay by accident. Remove inset hover styles from header hover state which was causing some wierd UI behavior

--- a/app/less/_common.less
+++ b/app/less/_common.less
@@ -36,6 +36,9 @@
 .roundBottom {
   border-radius: 0px 0px 2px 2px;
 }
+.overflowHidden {
+  overflow: hidden;
+}
 .onLoad {
   opacity: 1;
   transition: all .7s ease-in-out;
