--- a/app/less/contact.less
+++ b/app/less/contact.less
@@ -1,7 +1,6 @@
 @import '_common.less';
 
 .contact {
-  padding: 1px;
   #gradient.vertical(@tan-dark;
   @tan;
   );
@@ -10,8 +9,12 @@
   font-size: 19px;
 
   &__header {
-    height: 125px;
+    height: 170px;
     background-color: @jhm_orange;
+
+    @media(max-width:@screen-sm-min) {
+      height: 125px;
+    }
   }
   &__about {
     margin: 0px 30px;
