--- a/app/less/core.less
+++ b/app/less/core.less
@@ -3,7 +3,6 @@
 .core.active {
   margin-top: 0px;
   padding-bottom: 10%;
-  overflow: hidden;
 
   .core__logo {
     top: 0px;
