--- a/app/less/github.less
+++ b/app/less/github.less
@@ -1,46 +1,46 @@
 @import '_common.less';
 
 .github {
-    display: table;
-    padding: 15px;
-    border-top: 1px solid @tan;
-    border-bottom: 1px solid @tan;
-    margin: 7% auto 0px;
-    width: 100%;
-    max-width: 400px;
+  background-color: @darkerBrown;
+  padding: 10px;
+  margin: 0px;
+  width: 100%;
+  text-align: center;
 
-    &__logo {
-        display: table-cell;
-        vertical-align: middle;
-        text-align: center;
+  &__logo {
+    display: inline-block;
+    vertical-align: middle;
+    text-align: center;
+    height: 25px;
+  }
+  &__text {
+    font-size: 16px;
+    text-align: center;
+    letter-spacing: .5px;
+    display: inline-block;
+    vertical-align: middle;
+
+    >a {
+      display: inline-block;
+      width: 100%;
+      padding: 5px 15px;
+      color: @tan;
+      text-decoration: none;
+      font-weight: bold;
     }
-    &__text {
-      font-size: 24px;
-      text-align: center;
-      display: table-cell;
-      vertical-align: middle;
-        >a {
-          display: inline-block;
-          width: 100%;
-          padding: 5px 15px;
-          color: @tan;
-          text-decoration: none;
-          font-weight: bold;
-        }
-        >a:hover {
-         text-decoration: underline;
-        }
+    >a:hover {
+      text-decoration: underline;
     }
+  }
 }
-
 .github:hover {
-  box-shadow:  0px 3px 6px 0px rgba(50, 50, 50, 0.6);
+  box-shadow: 0px 3px 6px 0px rgba(50, 50, 50, 0.6);
+
   a {
     text-decoration: underline;
   }
 }
-
-@media (max-width: @screen-sm-min) {
+@media (max-width:@screen-sm-min) {
   .github {
     border: none;
   }
