--- a/app/less/header.less
+++ b/app/less/header.less
@@ -58,7 +58,6 @@
     }
     &__item:hover {
       background-color: darker(@header_color, 5%);
-      box-shadow: inset 0 0 15px rgba(255, 255, 255, .3);
     }
     &__item:first-child {
       border-left: none;
