--- a/app/less/tech.less
+++ b/app/less/tech.less
@@ -1,6 +1,7 @@
 @import '_common.less';
 
 .tech {
+  margin-top: 40px;
   width: 100%;
   padding: 50px;
   background-color: @tan;
